--- a/coubee-be-order/src/main/resources/application.yml
+++ b/coubee-be-order/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: coubee-order-service
+    name: coubee-be-order
   
   # HTTP encoding settings
   http:
