--- a/coubee-be-order/src/test/resources/application-test.yml
+++ b/coubee-be-order/src/test/resources/application-test.yml
@@ -1,15 +1,106 @@
+# 테스트 환경 설정
 spring:
-  config:
-    activate:
-      on-profile: "test"
+  profiles:
+    active: test
+  
+  # 테스트용 H2 메모리 데이터베이스
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false;MODE=MYSQL
+    url: jdbc:h2:mem:coubee_test;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    username: test
+    password: test
+  
+  # JPA 설정
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        default_batch_fetch_size: 100
+    database-platform: org.hibernate.dialect.H2Dialect
+    open-in-view: false
+  
+  # Flyway 테스트에서는 비활성화
   flyway:
     enabled: false
+  
+  # Kafka 테스트에서는 비활성화
   kafka:
-    bootstrap-servers: localhost:9092
+    enabled: false
 
-manager:
-  service:
-    name: managers
-    url: http://localhost:${wiremock.server.port}
+# 테스트용 PortOne 설정
+portone:
+  api:
+    url: https://api.portone.io
+    version: v2
+  v2:
+    store-id: "test-store-001"
+    api-secret: "test_secret_key_for_testing"
+    webhook-secret: "test_webhook_secret"
+    channels:
+      # 테스트용 결제 채널
+      card: "test-channel-card-001"
+      kakaopay: "test-channel-kakaopay-001"
+      tosspay: "test-channel-tosspay-001"
+      payco: "test-channel-payco-001"
+
+# 테스트 로깅 설정
+logging:
+  level:
+    com.coubee: DEBUG
+    org.springframework.web: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    root: INFO
+  pattern:
+    console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+
+# H2 콘솔 (테스트 중 디버깅용)
+spring.h2.console:
+  enabled: true
+  path: /h2-console
+
+# Actuator 테스트 설정
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
+
+# 테스트용 CORS 설정
+app:
+  cors:
+    allowed-origins: http://localhost:3000,http://localhost:8080,http://127.0.0.1:5500
+
+# 테스트 데이터 설정
+test-data:
+  stores:
+    store1:
+      id: 1
+      name: "테스트 매장 1"
+      address: "테스트 주소 1"
+    store2:
+      id: 2
+      name: "테스트 매장 2"
+      address: "테스트 주소 2"
+  
+  products:
+    product1:
+      id: 1
+      name: "테스트 상품 1"
+      price: 100
+    product2:
+      id: 2
+      name: "테스트 상품 2"
+      price: 100
+  
+  payment-methods:
+    - "CARD"
+    - "KAKAOPAY"
+    - "TOSSPAY"
+    - "PAYCO"
