Refactor: 현재 프로젝트에 맞게 리팩토링#2

--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ PORTONE_CHANNEL_KEY_TOSSPAY=channel-key-375e06c6-e99f-4563-a94a-04a3752d0243
 LOG_LEVEL=INFO
 LOG_SQL_LEVEL=INFO
 LOG_SQL_PARAM_LEVEL=DEBUG
+
+GEMINI_API_KEY = AIzaSyBolF-8OSBN9-nKuIgZa6Do6D4zTs32-Mc
