--- a/coubee-be-order/.kube/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube/coubee-be-order-config.yml
@@ -15,17 +15,22 @@ data:
           connection-test-query: SELECT 1
           validation-timeout: 5000
 
+      flyway:
+        enabled: true
+        baseline-on-migrate: true
+        locations: classpath:db/migration
+
       jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
-          ddl-auto: create # 개발 환경용
-        generate-ddl: true
+          ddl-auto: validate # Flyway가 스키마 관리
+        generate-ddl: false
         show-sql: true
         open-in-view: false
         properties:
           hibernate.default_schema: coubee_order
       kafka:
-        bootstrap-servers: localhost:9092
+        bootstrap-servers: kafka-service:9092
       
     eureka:
       client:
