--- a/coubee-be-order/build.gradle
+++ b/coubee-be-order/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     implementation 'com.google.zxing:javase:3.5.3'
 
     // Flyway
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-mysql'
+    implementation 'org.flywaydb:flyway-core:10.15.0'
+    implementation 'org.flywaydb:flyway-database-postgresql:10.15.0'
 
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
