--- a/coubee-be-order/.kube/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube/coubee-be-order-config.yml
@@ -5,7 +5,7 @@ metadata:
 data:
   application-stg.yml: |
     server:
-      port: 8083
+      port: 8080
     
     spring:
       datasource:
@@ -15,39 +15,14 @@ data:
           connection-test-query: SELECT 1
           validation-timeout: 5000
 
-      flyway:
-        enabled: true
-        baseline-on-migrate: true
-        locations: classpath:db/migration
-
+      
       jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
-          ddl-auto: validate # Flyway가 스키마 관리
-        generate-ddl: false
+          ddl-auto: create
         show-sql: true
         open-in-view: false
         properties:
           hibernate.default_schema: coubee_order
       kafka:
         bootstrap-servers: kafka-service:9092
-      
-    eureka:
-      client:
-        enabled: true
-        register-with-eureka: true
-        fetch-registry: true
-        service-url:
-          defaultZone: http://coubee-be-eureka-service:8761/eureka/
-      instance:
-        prefer-ip-address: true
-        instance-id: ${spring.application.name}:${server.port}
-    
-    management:
-      endpoints:
-        web:
-          exposure:
-            include: health,info,metrics
-      endpoint:
-        health:
-          show-details: always
