Fix: argo준비를위한 yml수정 #2

--- a/coubee-be-order/.kube/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube/coubee-be-order-config.yml
@@ -14,8 +14,6 @@ data:
         hikari:
           connection-test-query: SELECT 1
           validation-timeout: 5000
-
-      
       jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
@@ -25,4 +23,4 @@ data:
         properties:
           hibernate.default_schema: coubee_order
       kafka:
-        bootstrap-servers: kafka-service:9092
+        bootstrap-servers: coubee-external-kafka-service:9092
