--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: coubee-be-order
-          image: mingyoolee/coubee-be-order:0.0.1-SNAPSHOT
+          image: mingyoolee/coubee-be-order:0.0.1
           imagePullPolicy: Always
           env:
             - name: SPRING_PROFILES_ACTIVE
