Fix: argo준비를 위한 yml수정 #5

--- a/coubee-be-order/.kube/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube/coubee-be-order-config.yml
@@ -24,3 +24,7 @@ data:
           hibernate.default_schema: coubee_order
       kafka:
         bootstrap-servers: coubee-external-kafka-service:9092
+    portone:
+      api:
+        url: https://api.portone.io
+        version: v2
