--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -19,3 +19,21 @@ data:
                     - Path=/api/user/**
                   filters:
                     - addAuthenticationHeader
+                - id: coubee-be-store
+                  uri: http://coubee-be-store-service:8080
+                  predicates:
+                    - Path=/api/store/**
+                  filters:
+                    - addAuthenticationHeader
+                - id: coubee-be-product
+                  uri: http://coubee-be-product-service:8080
+                  predicates:
+                    - Path=/api/product/**
+                  filters:
+                    - addAuthenticationHeader
+                - id: coubee-be-order
+                  uri: http://coubee-be-order-service:8080
+                  predicates:
+                    - Path=/api/orders/**
+                  filters:
+                    - addAuthenticationHeader
