--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -34,6 +34,6 @@ data:
                 - id: coubee-be-order
                   uri: http://coubee-be-order-service:8080
                   predicates:
-                    - Path=/api/orders/**
+                    - Path=/api/order/**
                   filters:
                     - addAuthenticationHeader
