--- a/coubee-be-order/build.gradle
+++ b/coubee-be-order/build.gradle
@@ -41,9 +41,10 @@ dependencies {
     // implementation 'org.springframework.boot:spring-boot-starter-security'
     
     // Spring Cloud
-    // implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-all'
+    implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-all'
     // implementation 'org.springframework.cloud:spring-cloud-starter-config'
     // implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     
