--- a/coubee-be-user/build.gradle
+++ b/coubee-be-user/build.gradle
@@ -29,9 +29,12 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    // Spring Cloud Kubernetes for service discovery
+    implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-all'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
