--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -10,6 +10,30 @@ data:
     spring:
       cloud:
         gateway:
+          # ==========================================================
+          # ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ 이 부분 추가 ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼
+          # Gateway 레벨에서 전역 CORS 설정을 추가합니다.
+          globalcors:
+            cors-configurations:
+              '[/**]': # 모든 경로(/**)에 대해 적용
+                allowedOrigins: # '*' 대신 명시적인 URL 사용
+                  - "http://127.0.0.1:5500"
+                  - "http://localhost:5500"
+                  - "http://127.0.0.1:5501"
+                  - "http://localhost:5501"
+                  - "http://127.0.0.1:3000"
+                  - "http://localhost:3000"
+                allowedMethods:
+                  - "GET"
+                  - "POST"
+                  - "PUT"
+                  - "DELETE"
+                  - "PATCH"
+                  - "OPTIONS"
+                allowedHeaders: "*"
+                allowCredentials: true
+          # ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ 위 부분 추가 ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
+          # ==========================================================
           server:
             webmvc:
               routes:
