--- a/coubee-kafka/manifests/02-kafka.yaml
+++ b/coubee-kafka/manifests/02-kafka.yaml
@@ -59,13 +59,13 @@ spec:
           value: "kafka-headless"
         
         - name: KAFKA_ZOOKEEPER_CONNECT
-          value: "zookeeper-headless.kafka:2181"
+          value: "zookeeper-headless.kafka.svc.cluster.local:2181"
         - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
           value: "PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT"
         - name: KAFKA_LISTENERS
           value: "INTERNAL://:19092,PLAINTEXT://:9092"
         - name: KAFKA_ADVERTISED_LISTENERS
-          value: "INTERNAL://kafka-0.kafka-headless.kafka.svc.cluster.local:19092,PLAINTEXT://kafka.kafka:9092"
+          value: "INTERNAL://kafka-0.kafka-headless.kafka.svc.cluster.local:19092,PLAINTEXT://kafka-0.kafka-headless.kafka.svc.cluster.local:9092"
         - name: KAFKA_INTER_BROKER_LISTENER_NAME
           value: "INTERNAL"
         - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
