외부 google cloud e2 사용을 위한 준비

--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -37,27 +37,27 @@ data:
           server:
             webmvc:
               routes:
-                - id: coubee-be-user 
+                - id: coubee-be-user
                   uri: http://coubee-be-user-service:8080
                   predicates:
                     - Path=/api/user/**
-                  filters:
-                    - addAuthenticationHeader
+                  # filters:
+                  #   - addAuthenticationHeader
                 - id: coubee-be-store
                   uri: http://coubee-be-store-service:8080
                   predicates:
                     - Path=/api/store/**
-                  filters:
-                    - addAuthenticationHeader
+                  # filters:
+                  #   - addAuthenticationHeader
                 - id: coubee-be-product
                   uri: http://coubee-be-product-service:8080
                   predicates:
                     - Path=/api/product/**
-                  filters:
-                    - addAuthenticationHeader
+                  # filters:
+                  #   - addAuthenticationHeader
                 - id: coubee-be-order
                   uri: http://coubee-be-order-service:8080
                   predicates:
                     - Path=/api/order/**
-                  filters:
-                    - addAuthenticationHeader
+                  # filters:
+                  #   - addAuthenticationHeader
