--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -23,6 +23,9 @@ data:
                   - "http://localhost:5501"
                   - "http://127.0.0.1:3000"
                   - "http://localhost:3000"
+                  - "https://coubee-api.murkui.com"
+                  - "file://"  # For local HTML files
+                  - "null"     # For local HTML files opened directly
                 allowedMethods:
                   - "GET"
                   - "POST"
