--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: coubee-be-order
           image: mingyoolee/coubee-be-order:0.0.1
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent  # Changed from Always to IfNotPresent for local development
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: stg
@@ -26,6 +26,31 @@ spec:
               name: be-order-config-volume
             - mountPath: /etc/secret
               name: be-order-secret-volume
+          # Add resource limits and requests
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
+          # Add health checks
+          livenessProbe:
+            httpGet:
+              path: /api/health/live
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 10
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /api/health/ready
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
       volumes:
         - name: be-order-config-volume
           configMap:
