--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -16,13 +16,17 @@ data:
           globalcors:
             cors-configurations:
               '[/**]': # 모든 경로(/**)에 대해 적용
-                allowedOrigins: # '*' 대신 명시적인 URL 사용
+                allowedOriginPatterns: # Use patterns for more flexibility
+                  - "*"
+                allowedOrigins: # Specific origins for security
                   - "http://127.0.0.1:5500"
                   - "http://localhost:5500"
                   - "http://127.0.0.1:5501"
                   - "http://localhost:5501"
                   - "http://127.0.0.1:3000"
                   - "http://localhost:3000"
+                  - "http://127.0.0.1:40401"  # Direct order service port
+                  - "http://localhost:40401"   # Direct order service port
                   - "https://coubee-api.murkui.com"
                   - "file://"  # For local HTML files
                   - "null"     # For local HTML files opened directly
@@ -34,7 +38,8 @@ data:
                   - "PATCH"
                   - "OPTIONS"
                 allowedHeaders: "*"
-                allowCredentials: true
+                allowCredentials: false  # Changed to false for wildcard origins
+                exposedHeaders: "*"
           # ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ 위 부분 추가 ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
           # ==========================================================
           server:
