feat: add pre-flight checks and RBAC configuration to deployment scripts

--- a/coubee-be-user/.kube/coubee-be-user-deploy.yml
+++ b/coubee-be-user/.kube/coubee-be-user-deploy.yml
@@ -26,28 +26,20 @@ spec:
               name: be-user-config-volume
             - mountPath: /etc/secret
               name: be-user-secret-volume
-          # Add resource limits and requests
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
-          # Add health checks
+          # Health checks
           livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
-            initialDelaySeconds: 60
+            initialDelaySeconds: 180 # 60초 지연
             periodSeconds: 30
             timeoutSeconds: 10
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /actuator/health/readiness
+              path: /actuator/health
               port: 8080
-            initialDelaySeconds: 30
+            initialDelaySeconds: 180 # 60초 지연
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
