feat: add Spring Boot Actuator configuration and resource limits to deployment

--- a/coubee-be-gateway/.kube/coubee-be-gateway-deploy.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-deploy.yml
@@ -26,12 +26,20 @@ spec:
               name: api-gateway-config-volume
             - mountPath: /etc/secret
               name: api-gateway-secret-volume
-          # Add health checks
+          # Add resource limits and requests
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
+          # Optimized health checks
           livenessProbe:
             httpGet:
-              path: /actuator/health
+              path: /actuator/health/liveness
               port: 8080
-            initialDelaySeconds: 180
+            initialDelaySeconds: 60
             periodSeconds: 30
             timeoutSeconds: 10
             failureThreshold: 3
@@ -39,7 +47,7 @@ spec:
             httpGet:
               path: /actuator/health/readiness
               port: 8080
-            initialDelaySeconds: 180
+            initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
