--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -7,6 +7,24 @@ data:
     server:
       port: 8080
 
+    # Spring Boot Actuator Configuration
+    management:
+      endpoints:
+        web:
+          exposure:
+            include: health,info,metrics
+          base-path: /actuator
+      endpoint:
+        health:
+          show-details: always
+          probes:
+            enabled: true
+      health:
+        readiness-state:
+          enabled: true
+        liveness-state:
+          enabled: true
+
     spring:
       cloud:
         gateway:
