--- a/coubee-be-user/.kube/coubee-be-user-config.yml
+++ b/coubee-be-user/.kube/coubee-be-user-config.yml
@@ -6,6 +6,18 @@ data:
   application-stg.yml: |
     server:
       port: 8080
+
+    # Actuator의 liveness/readiness probe 엔드포인트를 활성화하는 설정
+    management:
+      endpoint:
+        health:
+          probes:
+            enabled: true
+      health:
+        readiness-state:
+          enabled: true
+        liveness-state:
+          enabled: true
     
     spring:
       datasource:
@@ -18,14 +30,17 @@ data:
       jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
-          ddl-auto: create # 개발 환경용
-        generate-ddl: true
+          # 기존 DB를 삭제하지 않고 엔티티와 스키마가 일치하는지 검사만 하도록 변경
+          ddl-auto: validate
+        # 'validate' 모드에서는 이 옵션이 필요 없습니다.
+        # generate-ddl: true
         show-sql: true
         open-in-view: false
         properties:
           hibernate.default_schema: coubee_user
       kafka:
         bootstrap-servers: coubee-external-kafka-service:9092
+        
     file:
       upload:
         base-dir: ${user.home}/Desktop/coubee-img
