--- a/coubee-be-user/.kube/coubee-be-user-deploy.yml
+++ b/coubee-be-user/.kube/coubee-be-user-deploy.yml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: coubee-be-user
           image: mingyoolee/coubee-be-user:0.0.1
-          imagePullPolicy: IfNotPresent  # Changed from Always to IfNotPresent for local development
+          imagePullPolicy: IfNotPresent
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: stg
@@ -26,23 +26,25 @@ spec:
               name: be-user-config-volume
             - mountPath: /etc/secret
               name: be-user-secret-volume
-          # Health checks
+          
+          # Health checks (이 부분의 들여쓰기를 주의 깊게 확인하세요)
           livenessProbe:
             httpGet:
-              path: /actuator/health
+              path: /actuator/health/liveness
               port: 8080
-            initialDelaySeconds: 180 # 60초 지연
+            initialDelaySeconds: 60
             periodSeconds: 30
             timeoutSeconds: 10
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /actuator/health
+              path: /actuator/health/readiness
               port: 8080
-            initialDelaySeconds: 180 # 60초 지연
+            initialDelaySeconds: 45
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
+            
       volumes:
         - name: be-user-config-volume
           configMap:
