--- a/gateway-rbac.yaml
+++ b/gateway-rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   name: service-reader
 rules:
 - apiGroups: [""]
-  resources: ["services", "endpoints"]
+  resources: ["configmaps", "pods", "services", "endpoints"]
   verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
