Feat: enhance health checks with increased timing and add management endpoints for Kubernetes

--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -26,23 +26,23 @@ spec:
               name: be-order-config-volume
             - mountPath: /etc/secret
               name: be-order-secret-volume
-          # Add health checks
+          # Add health checks with more generous timing for Spring Boot startup
           livenessProbe:
             httpGet:
               path: /api/health/live
               port: 8080
-            initialDelaySeconds: 60
+            initialDelaySeconds: 90  # Increased from 60 to allow for DB/Kafka initialization
             periodSeconds: 30
-            timeoutSeconds: 10
-            failureThreshold: 3
+            timeoutSeconds: 15       # Increased timeout
+            failureThreshold: 5      # Increased from 3 to be more tolerant
           readinessProbe:
             httpGet:
               path: /api/health/ready
               port: 8080
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
+            initialDelaySeconds: 60  # Increased from 30
+            periodSeconds: 15        # Increased from 10
+            timeoutSeconds: 10       # Increased from 5
+            failureThreshold: 5      # Increased from 3
       volumes:
         - name: be-order-config-volume
           configMap:
