Fix: disable Kubernetes integration

--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -15,10 +15,17 @@ spec:
       containers:
         - name: coubee-be-order
           image: mingyoolee/coubee-be-order:0.0.1
-          imagePullPolicy: IfNotPresent  # Changed from Always to IfNotPresent for local development
+          imagePullPolicy: IfNotPresent
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: stg
+            # Kubernetes API 비활성화 추가
+            - name: SPRING_CLOUD_KUBERNETES_ENABLED
+              value: "false"
+            - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED
+              value: "false"
+            - name: SPRING_CLOUD_KUBERNETES_CONFIG_ENABLED
+              value: "false"
           ports:
             - containerPort: 8080
           volumeMounts:
@@ -26,23 +33,22 @@ spec:
               name: be-order-config-volume
             - mountPath: /etc/secret
               name: be-order-secret-volume
-          # Add health checks with more generous timing for Spring Boot startup
           livenessProbe:
             httpGet:
               path: /api/health/live
               port: 8080
-            initialDelaySeconds: 90  # Increased from 60 to allow for DB/Kafka initialization
+            initialDelaySeconds: 90
             periodSeconds: 30
-            timeoutSeconds: 15       # Increased timeout
-            failureThreshold: 5      # Increased from 3 to be more tolerant
+            timeoutSeconds: 15
+            failureThreshold: 5
           readinessProbe:
             httpGet:
               path: /api/health/ready
               port: 8080
-            initialDelaySeconds: 60  # Increased from 30
-            periodSeconds: 15        # Increased from 10
-            timeoutSeconds: 10       # Increased from 5
-            failureThreshold: 5      # Increased from 3
+            initialDelaySeconds: 60
+            periodSeconds: 15
+            timeoutSeconds: 10
+            failureThreshold: 5
       volumes:
         - name: be-order-config-volume
           configMap:
