Fix: mark subprojects as dirty to indicate uncommitted changes

--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -35,7 +35,7 @@ spec:
               name: be-order-secret-volume
           livenessProbe:
             httpGet:
-              path: /api/health/live
+              path: /api/health/liveness
               port: 8080
             initialDelaySeconds: 90
             periodSeconds: 30
@@ -43,7 +43,7 @@ spec:
             failureThreshold: 5
           readinessProbe:
             httpGet:
-              path: /api/health/ready
+              path: /api/health/readiness
               port: 8080
             initialDelaySeconds: 60
             periodSeconds: 15
