Feat: Implement features marked as TODO

--- a/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-config.yml
@@ -7,83 +7,45 @@ data:
     server:
       port: 8080
 
-    # Spring Boot Actuator Configuration
-    management:
-      endpoints:
-        web:
-          exposure:
-            include: health,info,metrics
-          base-path: /actuator
-      endpoint:
-        health:
-          show-details: always
-          probes:
-            enabled: true
-      health:
-        readiness-state:
-          enabled: true
-        liveness-state:
-          enabled: true
-
     spring:
       cloud:
         gateway:
-          # ==========================================================
-          # ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼ 이 부분 추가 ▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼▼
-          # Gateway 레벨에서 전역 CORS 설정을 추가합니다.
-          globalcors:
-            cors-configurations:
-              '[/**]': # 모든 경로(/**)에 대해 적용
-                allowedOriginPatterns: # Use patterns for more flexibility
-                  - "*"
-                allowedOrigins: # Specific origins for security
-                  - "http://127.0.0.1:5500"
-                  - "http://localhost:5500"
-                  - "http://127.0.0.1:5501"
-                  - "http://localhost:5501"
-                  - "http://127.0.0.1:3000"
-                  - "http://localhost:3000"
-                  - "http://127.0.0.1:40401"  # Direct order service port
-                  - "http://localhost:40401"   # Direct order service port
-                  - "https://coubee-api.murkui.com"
-                  - "file://"  # For local HTML files
-                  - "null"     # For local HTML files opened directly
-                allowedMethods:
-                  - "GET"
-                  - "POST"
-                  - "PUT"
-                  - "DELETE"
-                  - "PATCH"
-                  - "OPTIONS"
-                allowedHeaders: "*"
-                allowCredentials: false  # Changed to false for wildcard origins
-                exposedHeaders: "*"
-          # ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ 위 부분 추가 ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
-          # ==========================================================
           server:
             webmvc:
               routes:
-                - id: coubee-be-user
+                - id: coubee-be-user 
                   uri: http://coubee-be-user-service:8080
                   predicates:
                     - Path=/api/user/**
-                  # filters:
-                  #   - addAuthenticationHeader
-                # - id: coubee-be-store
-                #   uri: http://coubee-be-store-service:8080
-                #   predicates:
-                #     - Path=/api/store/**
-                #   # filters:
-                #   #   - addAuthenticationHeader
-                # - id: coubee-be-product
-                #   uri: http://coubee-be-product-service:8080
-                #   predicates:
-                #     - Path=/api/product/**
-                #   # filters:
-                #   #   - addAuthenticationHeader
-                - id: coubee-be-order
+                  filters:
+                    - addAuthenticationHeader
+                - id: coubee-be-store
+                  uri: http://coubee-be-store-service:8080
+                  predicates:
+                    - Path=/api/store/**
+                  filters:
+                    - addAuthenticationHeader
+                - id: coubee-be-product
+                  uri: http://coubee-be-product-service:8080
+                  predicates:
+                    - Path=/api/product/**
+                  filters:
+                    - addAuthenticationHeader
+                                                - id: coubee-be-order
                   uri: http://coubee-be-order-service:8080
                   predicates:
                     - Path=/api/order/**
-                  # filters:
-                  #   - addAuthenticationHeader
+                  filters:
+                    - addAuthenticationHeader
+          globalcors:
+            cors-configurations:
+              '[/**]':
+                allowedOrigins: "*"
+                allowedMethods:
+                  - GET
+                  - POST
+                  - PUT
+                  - DELETE
+                  - OPTIONS
+                allowedHeaders: "*"
+                maxAge: 3600
