--- a/coubee-be-gateway/.kube/coubee-be-gateway-deploy.yml
+++ b/coubee-be-gateway/.kube/coubee-be-gateway-deploy.yml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: coubee-be-gateway
           image: mingyoolee/coubee-be-gateway:0.0.1
-          imagePullPolicy: IfNotPresent  # Changed from Always to IfNotPresent for local development
+          imagePullPolicy: Always
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: stg
@@ -26,23 +26,6 @@ spec:
               name: api-gateway-config-volume
             - mountPath: /etc/secret
               name: api-gateway-secret-volume
-          # Optimized health checks
-          livenessProbe:
-            httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-            initialDelaySeconds: 220
-            periodSeconds: 30
-            timeoutSeconds: 10
-            failureThreshold: 5
-          readinessProbe:
-            httpGet:
-              path: /actuator/health/readiness
-              port: 8080
-            initialDelaySeconds: 200
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 5
       volumes:
         - name: api-gateway-config-volume
           configMap:
