--- a/coubee-be-order/build.gradle
+++ b/coubee-be-order/build.gradle
@@ -88,7 +88,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 
     // Iamport 결제 라이브러리
-    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
+    implementation 'io.portone:server-sdk:0.19.2' 
     
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
