Feat: Integrate Product Service with error handling and logging enhancements

--- a/coubee-be-order/src/main/resources/application.yml
+++ b/coubee-be-order/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: coubee-be-order
 
+# Logging configuration
+logging:
+  level:
+    com.coubee.coubeebeorder.remote.client: DEBUG
+    feign: DEBUG
+
 
 
   kafka:
