--- a/react-native-expo/app.json
+++ b/react-native-expo/app.json
@@ -66,7 +66,8 @@
       }
     },
     "plugins": [
-      "@portone/react-native-sdk/plugin"
+      "@portone/react-native-sdk/plugin",
+      "expo-secure-store"
     ],
     "ios": {
       "bundleIdentifier": "com.coubee.payment",
