--- a/react-native-expo/package.json
+++ b/react-native-expo/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "@portone/react-native-sdk": "^0.4.0-alpha.1",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "2.11.1",
     "axios": "^1.11.0",
+    "base-64": "^1.0.0",
     "expo": "^52.0.11",
-    "expo-secure-store": "^14.2.3",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-webview": "13.12.2"
+    "react-native": "0.76.9",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
