--- a/react-native-expo/package.json
+++ b/react-native-expo/package.json
@@ -12,11 +12,12 @@
     "@react-native-picker/picker": "2.11.1",
     "axios": "^1.11.0",
     "base-64": "^1.0.0",
-    "expo": "^52.0.11",
+    "expo": "^53.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.9",
+    "react-native": "^0.76.3",
+    "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
