--- a/react-native-expo/package.json
+++ b/react-native-expo/package.json
@@ -4,14 +4,19 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
+    "reset": "yarn clean && yarn install --ignore-scripts",
+    "clean": "rimraf node_modules && rimraf .expo && rimraf dist",
+    "fresh": "yarn clean && yarn install --ignore-scripts && yarn start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "doctor": "expo doctor",
+    "clear-cache": "expo start --clear"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@portone/browser-sdk": "^0.0.24",
     "@portone/react-native-sdk": "^0.4.2",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -48,6 +53,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "rimraf": "^5.0.5",
     "typescript": "~5.8.3"
   },
   "private": true,
