Refactor: remove hardcoded URL from ProductServiceClient and apply service discovery pattern

--- a/coubee-be-order/src/main/resources/application.yml
+++ b/coubee-be-order/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 # Logging configuration
 logging:
   level:
-    com.coubee.coubeebeorder.remote.client: DEBUG
+    com.coubee.coubeebeorder.remote.product: DEBUG
     feign: DEBUG
 
 
