--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: coubee-be-order
-          image: mingyoolee/coubee-be-order:0.0.1
-          imagePullPolicy: IfNotPresent
+          image: mingyoolee/coubee-be-order:0.0.2
+          imagePullPolicy: Always
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: stg
