--- a/coubee-be-order/build.gradle
+++ b/coubee-be-order/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.coubee'
-version = '0.0.1'
+version = '0.0.2'
 
 java {
     toolchain {
@@ -64,8 +64,8 @@ dependencies {
     implementation 'com.google.zxing:javase:3.5.3'
 
     // // Flyway
-    // implementation 'org.flywaydb:flyway-core:10.15.0'
-    // implementation 'org.flywaydb:flyway-database-postgresql:10.15.0'
+    implementation 'org.flywaydb:flyway-core:10.15.0'
+    implementation 'org.flywaydb:flyway-database-postgresql:10.15.0'
 
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
