--- a/coubee-be-order/.kube/coubee-be-order-deploy.yml
+++ b/coubee-be-order/.kube/coubee-be-order-deploy.yml
@@ -23,7 +23,7 @@ spec:
             - name: SPRING_CLOUD_KUBERNETES_ENABLED
               value: "false"
             - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED
-              value: "false"
+              value: "true"
             - name: SPRING_CLOUD_KUBERNETES_CONFIG_ENABLED
               value: "false"
           ports:
