--- a/coubee-be-order/.kube/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube/coubee-be-order-config.yml
@@ -17,7 +17,7 @@ data:
       jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
-          ddl-auto: update
+          ddl-auto: validate
         show-sql: true
         open-in-view: false
         properties:
