--- a/coubee-be-order/.kube-ecr/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube-ecr/coubee-be-order-config.yml
@@ -8,6 +8,9 @@ data:
       port: 8080
     
     spring:
+      flyway:
+        baseline-on-migrate: true
+        baseline-version: 1
       datasource:
         url: jdbc:postgresql://52.78.117.85:5432/coubee_order?currentSchema=coubee_order
         driver-class-name: org.postgresql.Driver
