--- a/coubee-be-order/.kube-ecr/coubee-be-order-config.yml
+++ b/coubee-be-order/.kube-ecr/coubee-be-order-config.yml
@@ -8,15 +8,19 @@ data:
       port: 8080
     
     spring:
+      # 1. Flyway 에러 해결: 현재 DB 상태가 V4임을 명시
       flyway:
         baseline-on-migrate: true
         baseline-version: 4
+      
       datasource:
+        # 2. 스키마 경로 문제 해결: 모든 DB 연결이 coubee_order 스키마를 보도록 강제
         url: jdbc:postgresql://52.78.117.85:5432/coubee_order?currentSchema=coubee_order
         driver-class-name: org.postgresql.Driver
         hikari:
           connection-test-query: SELECT 1
           validation-timeout: 5000
+      
       jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
@@ -25,8 +29,10 @@ data:
         open-in-view: false
         properties:
           hibernate.default_schema: coubee_order
+      
       kafka:
         bootstrap-servers: coubee-external-kafka-service:9092
+    
     portone:
       api:
         url: https://api.portone.io
